# Sereal

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md  planned_feature.md  release.md
.github/workflows/: build.yml
Samples/Device/Arduino/: README.md
Samples/Device/Arduino/AnsiColor/: AnsiColor.ino
Samples/Device/Arduino/NoBreakAnsiColor/: NoBreakAnsiColor.ino
Samples/Device/Arduino/SampleUartLog/: SampleUartLog.ino
Samples/Device/Arduino/SendCountLog/: SendCountLog.ino
Sereal/: Cargo.toml
Sereal/src/: main.rs
Sereal/src/ansi_formatter/: ansi_formatter.rs  mod.rs
Sereal/src/sereal_colors/: color.rs  mod.rs  pallet.rs
Sereal/src/serial/: controller.rs  mod.rs  service.rs  types.rs  utils.rs
Sereal/src/ui/: mod.rs  serial_view.rs
