[package]
name = "Sereal"
version = "0.1.0-alpha.2"
edition = "2024"

[dependencies]
ansi-parser = "0.9.1"
eframe = "0.32.0"
egui = "0.32.0"
egui_dock = "0.17.0"
egui_extras = { version = "0.32.3", features = ["svg", "image"] }
getset = "0.1.6"
serialport = "4.7.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3.1"

[package.metadata.bundle]
name = "Sereal"
identifier = "teck.kobazlab.Sereal"
version = "0.1.0-alpha.2"
copyright = "Copyright (c) Masato Kobayashi 2025. All rights reserved."
